Refactor: Enum 클래스 코드 수정